# apk.exe

./: README.en.md  README.md  build.gradle  settings.gradle
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
demo/src/main/java/: Main.kt
demo/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
loader/: build.gradle  consumer-rules.pro
loader/src/main/: AndroidManifest.xml
loader/src/main/cpp/: CMakeLists.txt  app_process_loader.c  exported-symbols.txt  hookext.c  log.h
plugin/: build.gradle
plugin/src/main/kotlin/com/longxk/apk_exe/: Plugin.kt
